tests/regression/errors/basic/type_error_10.csd
// Type error test 10
sus number drip = 10
sus text tea = "string_10"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 10:", wrong)
